# seL4

./: .gitignore  Makefile
include/32/mode/: Makefile
include/64/mode/: Makefile
include/api/: syscall.xml  syscall.xsd
include/arch/x86/arch/object/: Makefile
include/plat/pc99/plat/: Makefile
include/plat/pc99/plat/32/plat_mode/machine/: Makefile
include/plat/pc99/plat/64/plat_mode/machine/: Makefile
libsel4/: CMakeLists.txt  Makefile
libsel4/arch_include/arm/sel4/arch/: deprecated.h  functions.h  objecttype.h  syscalls.h
libsel4/arch_include/x86/sel4/arch/: bootinfo.h  constants.h  deprecated.h  functions.h  objecttype.h  syscalls.h  types.h
libsel4/include/api/: syscall.xml  syscall.xsd
libsel4/include/sel4/: assert.h  benchmark_tracepoints_types.h  benchmark_track_types.h  benchmark_utilisation_types.h  bootinfo.h  config.h.in  constants.h  deprecated.h  faults.h  macros.h  simple_types.h  syscalls.h  types.h
libsel4/sel4_arch_include/aarch32/sel4/sel4_arch/: constants.h  deprecated.h  faults.h  functions.h  mapping.h  syscalls.h  types.bf
libsel4/sel4_arch_include/aarch64/sel4/sel4_arch/: constants.h  faults.h  functions.h  syscalls.h  types.bf
libsel4/sel4_arch_include/ia32/sel4/sel4_arch/: constants.h  deprecated.h  faults.h  mapping.h  objecttype.h  syscalls.h  types.bf  types.h
libsel4/sel4_arch_include/x86_64/sel4/sel4_arch/: constants.h  deprecated.h  faults.h  objecttype.h  syscalls.h  syscalls_syscall.h  syscalls_sysenter.h  types.bf  types.h
libsel4/sel4_plat_include/allwinnerA20/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/am335x/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/apq8064/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/bcm2837/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/imx31/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/imx6/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/imx7/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/pc99/sel4/plat/api/: constants.h
libsel4/sel4_plat_include/tx1/sel4/plat/api/: constants.h
libsel4/src/: sel4_bootinfo.c  sel4_nop.c
libsel4/tools/: syscall_stub_gen.py
manual/: Makefile
manual/tools/: gen_env.py
src/fastpath/: fastpath.c
src/plat/pc99/machine/: intel-vtd.c
tools/: bitfield_gen.py  invocation_header_gen.py  syscall_header_gen.py  umm.py
